--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,8 +3,8 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - dev-deployment
-      - uat-deployment
+      - dev
+      - uat
 
 jobs:
   build:
@@ -30,7 +30,8 @@ jobs:
       # Step 4: Run tests (optional, based on your setup)
       - name: Run Tests
         run: |
-          docker-compose -f docker-compose.yml -f docker-compose.dev.yml run app npm test
+          if [ "${{ github.ref }}" == "refs/heads/dev" ]; then
+            docker-compose -f docker-compose.yml -f docker-compose.dev.yml run app npm test
 
       # Step 5: Deploy to appropriate environment
       - name: Deploy to Environment
@@ -39,4 +40,4 @@ jobs:
             docker-compose -f docker-compose.yml -f docker-compose.dev.yml up -d
           elif [ "${{ github.ref }}" == "refs/heads/uat" ]; then
             echo "Deploying to UAT (e.g., DigitalOcean)"
-            # Add your DigitalOcean deployment steps here (SSH or DigitalOcean API)
+            # Add UAT deployment steps here (e.g., SSH or DigitalOcean API)
