--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,8 +3,8 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - dev
-      - uat
+      - dev-deployment
+      - uat-deployment
 
 jobs:
   build:
