--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: Build and Push Docker Image
 
 on:
   push:
@@ -12,35 +12,26 @@ jobs:
 
     steps:
       # Step 1: Checkout the code
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2
 
-      # Step 2: Set up Docker Buildx (for building images)
+      # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      # Step 3: Build Docker Image based on the branch (dev or uat)
-      - name: Build Docker Image
-        run: |
-          if [ "${{ github.ref }}" = "refs/heads/dev" ]; then
-            docker-compose -f docker-compose.yml -f docker-compose.dev.yml build
-          elif [ "${{ github.ref }}" = "refs/heads/uat" ]; then
-            docker-compose -f docker-compose.yml -f docker-compose.uat.yml build
-          fi
+      # Step 3: Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 4: Run tests (optional, based on your setup)
-      - name: Run Tests
+      # Step 4: Build Docker image
+      - name: Build Docker image
         run: |
-          if [ "${{ github.ref }}" = "refs/heads/dev" ]; then
-            docker-compose -f docker-compose.yml -f docker-compose.dev.yml run app npm test
-          fi
+          docker build -t your-dockerhub-username/your-image-name:latest .
 
-      # Step 5: Deploy to appropriate environment
-      - name: Deploy to Environment
+      # Step 5: Push Docker image to Docker Hub
+      - name: Push Docker image
         run: |
-          if [ "${{ github.ref }}" = "refs/heads/dev" ]; then
-            docker-compose -f docker-compose.yml -f docker-compose.dev.yml up -d
-          elif [ "${{ github.ref }}" = "refs/heads/uat" ]; then
-            echo "Deploying to UAT (e.g., DigitalOcean)"
-            # Add UAT deployment steps here (e.g., SSH or DigitalOcean API)
-          fi
+          docker push your-dockerhub-username/your-image-name:latest
