--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Build, Test, and Deploy Docker Image
 
 on:
   push:
@@ -15,23 +15,46 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Step 2: Set up Docker Buildx
+      # Step 2: Set up Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
+      # Step 3: Install dependencies
+      - name: Install dependencies
+        run: npm install
+
+      # Step 4: Run linting
+      - name: Run ESLint
+        run: npm run lint
+
+      # Step 5: Run tests
+      - name: Run tests
+        run: npm test
+
+      # Step 6: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      # Step 3: Log in to Docker Hub
+      # Step 7: Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 4: Build Docker image
+      # Step 8: Build Docker image
       - name: Build Docker image
         run: |
           docker build -t tanmaysinghx/ts-auth-service-1625:latest .
 
-      # Step 5: Push Docker image to Docker Hub
+      # Step 9: Push Docker image to Docker Hub
       - name: Push Docker image
         run: |
           docker push tanmaysinghx/ts-auth-service-1625:latest
+
+      # Step 10: Notify success (optional)
+      - name: Notify success
+        if: success()
+        run: echo "Docker image built and pushed successfully!"
