--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/server.ts",
     "dev": "nodemon src/server.ts",
     "predev": "echo 'Starting development server...'",
     "development": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "seed": "ts-node src/config/seed.ts"
+    "seed": "ts-node src/config/seed.ts",
+    "lint": "eslint .",
+    "test": "jest" 
   },
   "keywords": [],
   "author": "",
@@ -32,6 +33,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
@@ -39,9 +41,12 @@
     "@types/nodemailer": "^6.4.15",
     "@types/speakeasy": "^2.0.10",
     "@types/uuid": "^10.0.0",
+    "eslint": "^9.10.0",
+    "globals": "^15.9.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.5.0"
   }
 }
