--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,9 +25,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # Step 4: Run linting
-      - name: Run ESLint
-        run: npm run lint
+      # # Step 4: Run linting
+      # - name: Run ESLint
+      #   run: npm run lint
 
       # Step 5: Run tests
       - name: Run tests
