Fixes for intial setup

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:root@localhost:3306/testdb2"
+DATABASE_URL="mysql://root:root@localhost:3306/db1625"
 ACCESS_TOKEN_SECRET=your_access_token_secret
 REFRESH_TOKEN_SECRET=your_refresh_token_secret
-
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-email-password
