--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ ACCESS_TOKEN_SECRET=your_access_token_secret
 REFRESH_TOKEN_SECRET=your_refresh_token_secret
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-email-password
+PORT=1625
