--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "prisma": "^5.19.1",
     "speakeasy": "^2.0.0",
     "ts-node-dev": "^2.0.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.0",
