--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express": "^4.21.0",
     "express-rate-limit": "^7.4.0",
     "express-validator": "^7.2.0",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "memory-cache": "^0.2.0",
     "nanoid": "^5.0.7",
