--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "memory-cache": "^0.2.0",
     "morgan": "^1.10.0",
     "nanoid": "^5.0.7",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "prisma": "^5.19.1",
     "speakeasy": "^2.0.0",
@@ -46,6 +47,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.5.5",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.16",
     "@types/speakeasy": "^2.0.10",
     "@types/uuid": "^10.0.0",
