--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "speakeasy": "^2.0.0",
     "ts-node-dev": "^2.0.0",
     "uuid": "^10.0.0",
+    "validator": "^13.15.15",
     "winston": "^3.14.2"
   },
   "devDependencies": {
@@ -51,6 +52,7 @@
     "@types/nodemailer": "^6.4.16",
     "@types/speakeasy": "^2.0.10",
     "@types/uuid": "^10.0.0",
+    "@types/validator": "^13.15.2",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "@typescript-eslint/parser": "^8.6.0",
     "eslint": "^9.11.0",
