--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,5 @@
 DATABASE_URL="mysql://root:root@localhost:3306/db1625"
 ACCESS_TOKEN_SECRET=your_access_token_secret
 REFRESH_TOKEN_SECRET=your_refresh_token_secret
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-email-password
 PORT=1625
+API_VERSION=v2
