--- a/package.json
+++ b/package.json
@@ -47,12 +47,14 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.17.0",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.16",
     "@types/speakeasy": "^2.0.10",
+    "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.15.2",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
@@ -61,6 +63,8 @@
     "globals": "^15.9.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.2",
