--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@prisma/client": "^5.19.1",
     "@types/express": "^4.17.21",
+    "@types/swagger-ui-express": "^4.1.8",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -37,6 +38,8 @@
     "nodemailer": "^6.9.15",
     "prisma": "^5.19.1",
     "speakeasy": "^2.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node-dev": "^2.0.0",
     "uuid": "^10.0.0",
     "validator": "^13.15.15",
@@ -55,6 +58,7 @@
     "@types/nodemailer": "^6.4.16",
     "@types/speakeasy": "^2.0.10",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.15.2",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
