--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-rate-limit": "^7.4.0",
     "express-validator": "^7.2.0",
     "fs": "^0.0.1-security",
+    "geoip-lite": "^1.4.10",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "memory-cache": "^0.2.0",
@@ -37,6 +38,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "prisma": "^5.19.1",
+    "request-ip": "^3.3.0",
     "speakeasy": "^2.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -50,12 +52,14 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
+    "@types/geoip-lite": "^1.4.4",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.17.0",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.16",
+    "@types/request-ip": "^0.0.41",
     "@types/speakeasy": "^2.0.10",
     "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
