--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,47 +3,74 @@ name: CICD
 on:
   push:
     branches:
-      - master
+      - deployment
+  pull_request:
+    branches:
+      - deployment
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Checkout source code
       - name: Checkout source
         uses: actions/checkout@v3
-
-      # Step 2: Setup Node.js environment
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "18"
-
-      # Step 3: Cache Node.js modules
-      - name: Cache Node modules
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: npm-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            npm-${{ runner.os }}-
-
-      # Step 4: Install dependencies and build the project
+          cache: 'npm'
       - name: Install dependencies
-        run: npm install
+        run: npm ci
+      - name: Run Lint
+        run: npm run lint
 
-      - name: Build the project
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm ci
+      - name: Run Tests
+        run: npm test
+
+  audit:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+          cache: 'npm'
+      - name: Run Security Audit
+        run: npm audit --audit-level=high
+
+  build:
+    needs: [lint, test, audit]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm ci
+      - name: Build project
         run: npm run build
-
-      # Step 5: Login to Docker Hub
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      # Step 6: Build Docker image
       - name: Build Docker image
         run: docker build -t tanmaysinghx/ts-auth-service-1625:latest .
-
-      # Step 7: Publish Docker image to Docker Hub
       - name: Push Docker image
         run: docker push tanmaysinghx/ts-auth-service-1625:latest
-
